--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,20 @@
 /*  your css code here. If applicable */
+#line{
+    width: 200px;
+    height: 2px;
+    background-color: black;
+	position:absolute;
+	top:15em;
+	left: 10em;
+}
+
+.rotateLine{
+    background-color: brown;
+    animation: rotate 4s linear infinite normal;
+}
+
+@keyframes rotate {
+    0%{
+        transform: rotate(-360deg);
+    }
+}
